deploy/kustomize/overlays/nonprod/patch-scale.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: github-stats
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
spec:
  replicas: 1
